--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <a href="/">Venha para Paracuru</a>
             <a href="/descubra-mais.html">Descubra Mais</a>
             <a href="/menu.html">Menu</a>
+            <div>
+                <span>Admin</span>
+                <a href="/admin/servicos.html">Serviços</a>
+            </div>
         </nav>
     </header>
     <main>
@@ -21,54 +25,58 @@
         </section>
         <section>
             <h2>Blog</h2>
-            <article>
-                <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
-                <p>Renato</p>
-                <h3>Maecenas vel maximus lacus</h3>
-                <p>Vivamus tristique varius lorem, a ultrices dolor ullamcorper vitae. Mauris ullamcorper, elit et luctus finibus...</p>
-                <p>
-                    <img src="visualizados.png" alt="Visualizados"> 0
-                </p>
-            </article>
-            <article>
-                <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
-                <p>Renato</p>
-                <h3>Maecenas vel maximus lacus</h3>
-                <p>Vivamus tristique varius lorem, a ultrices dolor ullamcorper vitae. Mauris ullamcorper, elit et luctus finibus...</p>
-                <p>
-                    <img src="visualizados.png" alt="Visualizados"> 0
-                </p>
-            </article>
-            <article>
-                <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
-                <p>Renato</p>
-                <h3>Maecenas vel maximus lacus</h3>
-                <p>Vivamus tristique varius lorem, a ultrices dolor ullamcorper vitae. Mauris ullamcorper, elit et luctus finibus...</p>
-                <p>
-                    <img src="visualizados.png" alt="Visualizados"> 0
-                </p>
-            </article>
+            <div>
+                <article>
+                    <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
+                    <p>Renato</p>
+                    <h3>Maecenas vel maximus lacus</h3>
+                    <p>Vivamus tristique varius lorem, a ultrices dolor ullamcorper vitae. Mauris ullamcorper, elit et luctus finibus...</p>
+                    <p>
+                        <img src="visualizados.png" alt="Visualizados"> 0
+                    </p>
+                </article>
+                <article>
+                    <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
+                    <p>Renato</p>
+                    <h3>Maecenas vel maximus lacus</h3>
+                    <p>Vivamus tristique varius lorem, a ultrices dolor ullamcorper vitae. Mauris ullamcorper, elit et luctus finibus...</p>
+                    <p>
+                        <img src="visualizados.png" alt="Visualizados"> 0
+                    </p>
+                </article>
+                <article>
+                    <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
+                    <p>Renato</p>
+                    <h3>Maecenas vel maximus lacus</h3>
+                    <p>Vivamus tristique varius lorem, a ultrices dolor ullamcorper vitae. Mauris ullamcorper, elit et luctus finibus...</p>
+                    <p>
+                        <img src="visualizados.png" alt="Visualizados"> 0
+                    </p>
+                </article>
+            </div>
         </section>
         <section>
             <h2>Serviços</h2>
-            <article>
-                <img src="/imagens/servico1.png" alt="História e cultura">
-                <h3>História e cultura</h3>
-                <span>R$ 70</span>
-                <a href="/servico1.html">Ver curso</a>
-            </article>
-            <article>
-                <img src="/imagens/servico1.png" alt="História e cultura">
-                <h3>História e cultura</h3>
-                <span>R$ 70</span>
-                <a href="/servico1.html">Ver curso</a>
-            </article>
-            <article>
-                <img src="/imagens/servico1.png" alt="História e cultura">
-                <h3>História e cultura</h3>
-                <span>R$ 70</span>
-                <a href="/servico1.html">Ver curso</a>
-            </article>
+            <div>
+                <article>
+                    <img src="/imagens/servico1.png" alt="História e cultura">
+                    <h3>História e cultura</h3>
+                    <span>R$ 70</span>
+                    <a href="/servico1.html">Ver curso</a>
+                </article>
+                <article>
+                    <img src="/imagens/servico1.png" alt="História e cultura">
+                    <h3>História e cultura</h3>
+                    <span>R$ 70</span>
+                    <a href="/servico1.html">Ver curso</a>
+                </article>
+                <article>
+                    <img src="/imagens/servico1.png" alt="História e cultura">
+                    <h3>História e cultura</h3>
+                    <span>R$ 70</span>
+                    <a href="/servico1.html">Ver curso</a>
+                </article>
+            </div>
         </section>
         <section>
             <h2>Sobre Paracuru</h2>
