--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venha para Paracuru</title>
+    <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
@@ -18,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="banner">
             <h1>Explore Paracuru</h1>
             <p>Descubra a magia local</p>
             <a href="/descubra-mais.html">Iniciar</a>
