--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <p>Descubra a magia local</p>
             <a href="/descubra-mais.html">Iniciar</a>
         </section>
-        <section>
+        <section id="blog">
             <h2>Blog</h2>
-            <div>
+            <div class="artigos">
                 <article>
                     <img src="/imagens/noticia1.png" alt="Maecenas vel maximus lacus">
                     <p>Renato</p>
@@ -56,9 +56,9 @@
                 </article>
             </div>
         </section>
-        <section>
+        <section id="servicos">
             <h2>Serviços</h2>
-            <div>
+            <div class="artigos">
                 <article>
                     <img src="/imagens/servico1.png" alt="História e cultura">
                     <h3>História e cultura</h3>
